<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#333"
    tools:context="com.example.android.mycard.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:src="@drawable/spago" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-light"
            android:gravity="center"
            android:paddingBottom="10dp"
            android:text="@string/spago_title"
            android:textColor="@android:color/white"
            android:textSize="36sp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#4b5f83">

            <ImageView
                android:id="@+id/phoneIcon"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:padding="1dp"
                android:src="@drawable/phone" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@id/phoneIcon"
                android:fontFamily="sans-serif-light"
                android:paddingLeft="7dp"
                android:text="@string/phone_number"
                android:textColor="@android:color/white"
                android:textSize="16sp" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/bgkReferences">

            <ImageView
                android:id="@+id/mailIcon"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:padding="1dp"
                android:src="@drawable/mail" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@id/mailIcon"
                android:fontFamily="sans-serif-light"
                android:paddingLeft="7dp"
                android:text="@string/email"
                android:textColor="@android:color/white"
                android:textSize="16sp" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#4b5f83">

            <ImageView
                android:id="@+id/webIcon"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:padding="1dp"
                android:src="@drawable/globe" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@id/webIcon"
                android:fontFamily="sans-serif-light"
                android:paddingLeft="7dp"
                android:text="@string/website"
                android:textColor="@android:color/white"
                android:textSize="16sp" />
        </RelativeLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-light"
            android:padding="10dp"
            android:text="@string/description"
            android:textColor="@android:color/white"
            android:textSize="16sp" />
    </LinearLayout>
</ScrollView>